[package]

name = "nn"
version = "0.2.0"
edition = "2021"
authors = ["Jack Montgomery <jackm321@gmail.com>"]
repository = "https://github.com/jackm321/RustNN"
documentation = "https://jackm321.github.io/RustNN/doc/nn/"
license = "Apache-2.0"
readme = "README.md"

description = """
A multilayer feedforward backpropagation neural network library
"""

keywords = ["nn", "neural-network", "classifier", "backpropagation",
            "machine-learning"]

[dependencies]
rand = "0.8.5"
time = "0.3.15"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"